# Project-Euler

./: CHANGELOG.md  README.md  problem001.py  problem002.py  problem003.py  problem005.py  problem006.py  problem007.py  problem008.py  problem009.py  problem010.py  problem011.py  problem012.py  problem013.py  problem015.py  problem017.py  problem018.py  problem019.py  problem020.py  problem021.py  problem022.py  problem024.py  problem025.py  problem026.py  problem027.py  problem028.py  problem029.py  problem030.py  problem031.py  problem032.py  problem033.py  problem034.py  problem035.py  problem036.py  problem037.py  problem038.py  problem039.py  problem040.py  problem041.py  problem042.py  (+46 more)
.github/workflows/: python-workflow.yml
src/: config.py
src/solutions/: p001.py  p002.py  p003.py  p004.py  p005.py  p006.py  p007.py  p008.py  p009.py  p010.py  p011.py  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p018.py  p019.py  p020.py  p021.py  p022.py  p023.py  p024.py  p025.py  p026.py  p027.py  p028.py  p029.py  p030.py  p031.py  p032.py  p033.py  p034.py  p035.py  p036.py  p037.py  p038.py  p039.py  p040.py  (+54 more)
src/utils/: div.py  exceptions.py  prime_config.py  primes.py
tests/: test_p003.py  test_p008.py  test_p009.py  test_p011.py  test_p012.py  test_p013.py  test_p014.py  test_p015.py  test_p016.py  test_p017.py  test_p018.py  test_p019.py  test_p022.py
tests/test_solutions/: test_p001.py  test_p002.py  test_p003.py  test_p004.py  test_p005.py  test_p006.py  test_p007.py  test_p008.py  test_p009.py  test_p010.py  test_p011.py  test_p012.py  test_p013.py  test_p014.py  test_p015.py  test_p016.py  test_p017.py  test_p018.py  test_p019.py  test_p020.py  test_p021.py  test_p022.py  test_p023.py  test_p024.py  test_p025.py  (+69 more)
utils/: primes.py
(+1 files in other folders)
