[tool.poetry]
name = "project euler"
version = "0.89.0"
description = "Solutions to https://projecteuler.net/"
authors = ["JohN100x1 <JohN100x1@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"