[tool.poetry]
name = "project euler"
version = "0.92.0"
description = "Solutions to https://projecteuler.net/"
authors = ["JohN100x1 <JohN100x1@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2"
requests = "^2"

[tool.poetry.dev-dependencies]
black = "^24"
isort = "^5"
pytest = "^8"
mypy = "^1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79